--- a/HomeworkView/Web.config
+++ b/HomeworkView/Web.config
@@ -10,7 +10,9 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-HomeworkView-20200127113416.mdf;Initial Catalog=aspnet-HomeworkView-20200127113416;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <add name="ModelContext" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\HomeworkDB.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="HomeworkModel" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\HomeworkDB.mdf;integrated security=True;multipleactiveresultsets=True;connect timeout=30;application name=EntityFramework" providerName="System.Data.SqlClient" />
+  <add name="HomeworkDbContext" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\HomeworkDB.mdf;integrated security=True;multipleactiveresultsets=True;connect timeout=30;application name=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
