加入編輯明細頁

--- a/HomeworkView/HomeworkView.csproj
+++ b/HomeworkView/HomeworkView.csproj
@@ -282,6 +282,8 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\BookKeeping\Index.cshtml" />
+    <Content Include="Views\BookKeeping\Details.cshtml" />
+    <Content Include="Views\BookKeeping\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
